fix build__header align

--- a/src/components/BuildCard/buildCard.css
+++ b/src/components/BuildCard/buildCard.css
@@ -40,7 +40,7 @@
 }
 
 .build__header {
-  align-items: top;
+  align-items: flex-start;
 }
 
 .build-icon {
